# turtle-db

./: .coverage  CLAUDE.md  pyproject.toml
data/: turtle_db.sqlite
docs/: api_design.md  data_models.py  database_design_specification.md  database_migration_strategy.md  database_schema.sql  enhanced_database_schema.sql  implementation_guide.md  planning.md  project_structure.md
src/turtle_db/: __init__.py  cli.py  config.py  main.py
src/turtle_db/api/: deps.py
src/turtle_db/api/v1/: router.py
src/turtle_db/api/v1/endpoints/: imports.py  items.py
src/turtle_db/database/: __init__.py  connection.py  enhanced_models.py  enhanced_seed_data.py  migrations.py  models.py  seed_data.py
src/turtle_db/schemas/: common.py  enhanced_items.py  items.py
src/turtle_db/scrapers/: __init__.py  base.py  models.py  turtle_wow.py
src/turtle_db/services/: data_mapper.py  import_service.py  items.py
src/turtle_db/utils/: exceptions.py
tests/: __init__.py  conftest.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_api_items.py  test_api_items_comprehensive.py
tests/unit/: test_item_service_comprehensive.py  test_models.py  test_services.py  test_simple_coverage.py
